ef core example and setup

--- a/GTL.OrderService.API/appsettings.json
+++ b/GTL.OrderService.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "OrderServiceDbConnectionString": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
