--- a/GTL.Warehouse.API/appsettings.json
+++ b/GTL.Warehouse.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "WarehouseDbConnectionString": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
