--- a/GTL.PaymentService.API/appsettings.json
+++ b/GTL.PaymentService.API/appsettings.json
@@ -6,6 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "RabbitMq": {
+    "Host": "localhost:5673",
+    "Username": "",
+    "Password": ""
+  },
   "Settings": {
     "Limit": 1000,
     "SeqLogAddress": "http://SeQ:5341/"
