--- a/GTL.OrderService.API/appsettings.json
+++ b/GTL.OrderService.API/appsettings.json
@@ -8,6 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "RabbitMq": {
+    "Host": "localhost:5673",
+    "Username": "",
+    "Password": ""
+  },
   "AllowedHosts": "*",
   "Serilog": {
     "Using": [
