--- a/GTL.SearchService.API/appsettings.json
+++ b/GTL.SearchService.API/appsettings.json
@@ -5,6 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "RabbitMq": {
+    "Host": "localhost:5673",
+    "Username": "",
+    "Password": ""
+  },
   "AllowedHosts": "*",
   "Serilog": {
     "Using": [
