--- a/GTL.Customer.API/GTL.Customer.API.csproj
+++ b/GTL.Customer.API/GTL.Customer.API.csproj
@@ -4,12 +4,17 @@
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-        <RootNamespace>GTL.CustomerSerivce.API</RootNamespace>
+        <RootNamespace>GTL.Customer.API</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.11"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\GTL.Customer.Application\GTL.Customer.Application.csproj" />
+      <ProjectReference Include="..\GTL.Customer.Domain\GTL.Customer.Domain.csproj" />
     </ItemGroup>
 
 </Project>
