--- a/GTL.Customer.API/appsettings.json
+++ b/GTL.Customer.API/appsettings.json
@@ -1,9 +1,49 @@
 {
+  "ConnectionStrings": {
+    "CustomerDbConnectionString": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "RabbitMq": {
+    "Host": "localhost:5673",
+    "Username": "",
+    "Password": ""
+  },
+  "AllowedHosts": "*",
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.Seq"
+    ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": ""
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId"
+    ],
+    "Properties": {
+      "Application": "GTL.OrderService.API"
+    }
+  }
 }
