Changed Application name in appsetting

--- a/GTL.SearchService.API/appsettings.json
+++ b/GTL.SearchService.API/appsettings.json
@@ -40,7 +40,7 @@
       "WithThreadId"
     ],
     "Properties": {
-      "Application": "GTL.OrderService.API"
+      "Application": "GTL.SearchService.API"
     }
   }
 }
