Update book entity to now contain UserId. Updated location of persistence project in folder.

--- a/GTL.Warehouse.API/GTL.Warehouse.API.csproj
+++ b/GTL.Warehouse.API/GTL.Warehouse.API.csproj
@@ -35,8 +35,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\..\..\Desktop\Saved\GTL.Warehouse.Persistence\GTL.Warehouse.Persistence.csproj" />
       <ProjectReference Include="..\GTL.Messaging.RabbitMq\GTL.Messaging.RabbitMq.csproj" />
+      <ProjectReference Include="..\GTL.Warehouse.Persistence\GTL.Warehouse.Persistence.csproj" />
     </ItemGroup>
 
 </Project>
