Redis cache implemented

--- a/GTL.SearchService.API/appsettings.json
+++ b/GTL.SearchService.API/appsettings.json
@@ -42,5 +42,8 @@
     "Properties": {
       "Application": "GTL.SearchService.API"
     }
+  },
+  "ConnectionStrings": {
+    "Redis": "localhost:6379"
   }
 }
