--- a/GTL.PaymentService.API/GTL.PaymentService.API.csproj
+++ b/GTL.PaymentService.API/GTL.PaymentService.API.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GTL.Messaging.RabbitMq\GTL.Messaging.RabbitMq.csproj" />
+  </ItemGroup>
+
 </Project>
