--- a/GTL.Warehouse.API/GTL.Warehouse.API.csproj
+++ b/GTL.Warehouse.API/GTL.Warehouse.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
@@ -8,15 +8,35 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.11"/>
+      <Compile Remove="Persistence\**" />
+      <Compile Remove="Services\**" />
+      <Content Remove="Persistence\**" />
+      <Content Remove="Services\**" />
+      <EmbeddedResource Remove="Persistence\**" />
+      <EmbeddedResource Remove="Services\**" />
+      <None Remove="Persistence\**" />
+      <None Remove="Services\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="MassTransit" Version="8.3.2" />
+        <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.2" />
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.11" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.11">
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+          <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.11" />
         <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
         <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
         <PackageReference Include="Serilog.Sinks.Seq" Version="8.0.0" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\GTL.Messaging.RabbitMq\GTL.Messaging.RabbitMq.csproj" />
+      <ProjectReference Include="..\GTL.Warehouse.Persistence\GTL.Warehouse.Persistence.csproj" />
     </ItemGroup>
 
     <ItemGroup>
