search in main (#10)
* Changed Application name in appsetting

* Redis cache implemented

* Consumer added BookQuantityChanged

--- a/GTL.SearchService.API/appsettings.json
+++ b/GTL.SearchService.API/appsettings.json
@@ -40,7 +40,10 @@
       "WithThreadId"
     ],
     "Properties": {
-      "Application": "GTL.OrderService.API"
+      "Application": "GTL.SearchService.API"
     }
+  },
+  "ConnectionStrings": {
+    "Redis": "localhost:6379"
   }
 }
